--- a/SimRa/Base.lproj/Main.storyboard
+++ b/SimRa/Base.lproj/Main.storyboard
@@ -259,6 +259,41 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="zS8-SF-nTN">
+                                        <rect key="frame" x="0.0" y="364" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zS8-SF-nTN" id="pya-Ma-Q37">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ysy-Na-eJd">
+                                                    <rect key="frame" x="20" y="11.5" width="57" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="kR7-A2-PsP"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4sb-MR-RAq">
+                                                    <rect key="frame" x="85" y="7" width="215" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="NR3-Fy-u8P"/>
+                                                    </constraints>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="4sb-MR-RAq" secondAttribute="trailing" constant="20" symbolic="YES" id="1yv-zL-XN0"/>
+                                                <constraint firstItem="4sb-MR-RAq" firstAttribute="centerY" secondItem="pya-Ma-Q37" secondAttribute="centerY" id="7J2-Ou-Sqx"/>
+                                                <constraint firstItem="4sb-MR-RAq" firstAttribute="leading" secondItem="ysy-Na-eJd" secondAttribute="trailing" constant="8" symbolic="YES" id="DME-Uv-Tkn"/>
+                                                <constraint firstItem="ysy-Na-eJd" firstAttribute="centerY" secondItem="pya-Ma-Q37" secondAttribute="centerY" id="Pf9-9S-Qz7"/>
+                                                <constraint firstItem="ysy-Na-eJd" firstAttribute="leading" secondItem="pya-Ma-Q37" secondAttribute="leading" constant="20" symbolic="YES" id="bgp-xf-8oI"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -268,10 +303,13 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Settings" id="03L-ez-qcN"/>
+                    <connections>
+                        <outlet property="version" destination="4sb-MR-RAq" id="oq8-hk-RI5"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d3B-Kr-Puk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1895.6521739130437" y="-133.25892857142856"/>
+            <point key="canvasLocation" x="1895.625" y="-134.1549295774648"/>
         </scene>
         <!--Settings-->
         <scene sceneID="Hvw-2j-48M">
